Bug 701517 - Moz-prefix Battery API interfaces. rs+sr=smaug